# embedded-systems-engineering-phase-5

./: .gitignore  README.md  flows.json
cpp-esp/: .gitignore  DEMO_CHEAT_SHEET.md  In21-EN4440-API Service Documentation.txt  In21-EN4440-Project Outline.txt  MILESTONE_5_COMPLIANCE_CHECK.md  MILESTONE_5_COMPREHENSIVE_STATUS.md  Milestone 4 - Resources - In21-EN4440-Project Outline.txt  Milestone 5 - Resources - In21-EN4440-Project Outline.docx  Milestone 5 - Resources - In21-EN4440-Project Outline.txt  README.md  app.py  check_fota_status.py  config_dashboard.html  demo_fota_complete.py  event_log_monitor.py  fault_injection_test.py  fault_recovery_test_report_20251126_144901.md  fota_update_manager.py  integration_test_report_20251126_145143.md  integration_test_suite.py  monitor_fota_progress.ps1  monitor_security.ps1  new_readme.md  platformio.ini  power_demo.py  power_measurement_report_20251126_new.md  power_report_generator.py  quick_fota_status.ps1  quick_upload.py  recording_assistant.py  restart_flask.ps1  run_security_test.py  security_demo.py  security_monitor.py  send_command.py  send_config_update.py  serial_monitor_demo.py  serial_monitor_interactive.py  simple_fault_test.py  test_firmware_upload.ps1  (+8 more)
cpp-esp/config/: config.json  config_demo.json
cpp-esp/data/: config_history.json  pending_configs.json  server_nonce_state.json
cpp-esp/data/config/: config.json
cpp-esp/include/: acquisition_scheduler.hpp  command_execution.hpp  command_executor.hpp  config_manager.hpp  config_update.hpp  data_storage.hpp  ecoWatt_device.hpp  event_logger.hpp  exceptions.hpp  fault_handler.hpp  fota_manager.hpp  http_client.hpp  logger.hpp  modbus_frame.hpp  power_manager.hpp  protocol_adapter.hpp  remote_config_handler.hpp  secure_http_client.hpp  security_layer.hpp  ticker_fallback.hpp  types.hpp  uplink_packetizer.hpp  wifi_connector.hpp
cpp-esp/nodered/: flows.json
cpp-esp/src/: acquisition_scheduler.cpp  command_executor.cpp  config_manager.cpp  data_storage.cpp  ecoWatt_device.cpp  event_logger.cpp  fault_handler.cpp  fota_manager.cpp  http_client.cpp  logger.cpp  main.ino  modbus_frame.cpp  power_manager.cpp  protocol_adapter.cpp  remote_config_handler.cpp  secure_http_client.cpp  security_layer.cpp  uplink_packetizer.cpp  wifi_connector.cpp
cpp-esp/test/: test_security.cpp
data/: config_history.json  pending_configs.json
docs/: Compression-Algorithm-Benchmark-Report.md  FOTA_IMPLEMENTATION.md  FOTA_QUICK_START.md  FOTA_TESTING_COMPLETE_GUIDE.md  FOTA_UPDATE_MANAGER_GUIDE.md  MILESTONE4_PART1_DOCUMENTATION.md  MILESTONE4_PART2_DOCUMENTATION.md  MILESTONE_4_COMPLETE_DEMO_SCRIPT.md  MILESTONE_4_PART_3_COMPLETE.md  SECURITY_TESTING_GUIDE.md
tests/: CMakeLists.txt  test_modbus_frame.cpp
